--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,12 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-URL: https://github.com/kennedymwavu/micromodal
+URL: https://github.com/kennedymwavu/micromodal,
+    https://mwavu.com/micromodal/
 BugReports: https://github.com/kennedymwavu/micromodal/issues
 Imports: 
     htmltools
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
