--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,10 @@ URL: https://github.com/kennedymwavu/micromodal,
     https://mwavu.com/micromodal/
 BugReports: https://github.com/kennedymwavu/micromodal/issues
 Imports: 
-    htmltools
+    htmltools (>= 0.5.5)
 Suggests: 
-    knitr,
-    rmarkdown
+    bslib (>= 0.5.0),
+    knitr (>= 1.43),
+    rmarkdown (>= 2.23),
+    shiny (>= 1.7.4.1)
 VignetteBuilder: knitr
