--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: micromodal
-Title: Create Simple and Elegant Modal Dialogs in Shiny via 'Micromodal' JavaScript Library
+Title: Create Simple and Elegant Modal Dialogs in 'shiny'
 Version: 1.0.0
 Authors@R: 
     person("Kennedy", "Mwavu", , "mwavukennedy@gmail.com", role = c("aut", "cre", "cph"),
